--- a/j_2_3_hello_class.ipynb
+++ b/j_2_3_hello_class.ipynb
@@ -1472,18 +1472,15 @@
     "## 2.6 variables\n",
     "\n",
     "* 변수는 값을 저장하는 기능을 가지고 있다.\n",
-    "    * 비유 상자(box) (hfj는 컵으로 비유)\n",
-    "    * 그 안에 뭔가를 저장할 수 있다.\n",
+    "    * 상자(box)로 비유할 수 있다. (hfj는 컵으로 비유)\n",
+    "    * 그 안에 값을 저장할 수 있다. 박스 모양과 다르면 넣을 수가 없다.\n",
     "* 변수는 값의 종류에 따라 (정수, 문자, 소수...) 메모리에서 차지하는 공간에 차이가 있다.\n",
     "* 변수는 선언을 한 후 사용해야 한다 (declare라고 한다).\n",
     "    * 변수명과 타잎을 적어야 한다.\n",
     "* 변수의 종류 -> data type\n",
-    "    * primitive\n",
-    "    * reference\n",
-    "* array\n",
-    "\n",
-    "* 문제: array에 있는 수를 모두 출력해보기\n",
-    "* 문제: array에 있는 객체를 모두 출력해보기"
+    "    * primitive - 메모리의 크기가 정해져 있다.\n",
+    "    * reference - 메모리의 크기가 정해져 있지 않다.\n",
+    "* array는 여러 값을 가지고 있으므로, array변수는 primitive의 배열 또는 reference의 배열을 가질 수 있다.\n"
    ]
   },
   {
@@ -1492,14 +1489,20 @@
    "source": [
     "### 2.6.1 primitive\n",
     "\n",
-    "종류 | 설명 | 메모리 크기\n",
-    "---|---|---\n",
-    "primitive | byte | 8\n",
-    "    | short | 16\n",
-    "    | int | 32\n",
-    "    | long | 64\n",
-    "    | float | 32\n",
-    "    | double | 64"
+    "* 아래와 같이 메모리의 크기가 정해져 있다.\n",
+    "* 모든 primitive type에 대응되는 클래스가 있다. 이를 'wrapper class'라고 한다.\n",
+    "    * 단 string은 primitive가 없다. '문자열'은 문자의 배열이라 그 크기를 알 수 없기 때문이다.\n",
+    "\n",
+    "종류 | 메모리 크기 (bits) | 최소~최대 | Wrapper class\n",
+    "-----|-----|-----|-----\n",
+    "boolean\t| 8 | TF (2개 값만 필요하지만 8bits 사용) | Boolean\n",
+    "char\t| 16 | 0~65535 | Character\n",
+    "byte\t| 8 | -128~127 | Byte\n",
+    "short\t| 16 | -32768~32767 | Short\n",
+    "int\t| 32 | -2147483648~2147483647 | Integer\n",
+    "long\t| 64 |-9223372036854775808 ~ 9223372036854775807 | Long\n",
+    "float\t| 32 | 1.4E-45~3.4028235E38 | Float\n",
+    "double\t| 64 | 4.9E-324~1.7976931348623157E308 | Double\n"
    ]
   },
   {
@@ -1511,7 +1514,7 @@
     "* casting\n",
     "    * 메모리가 큰 타잎을 적은 타잎에 넣으려고 하면, 오류\n",
     "    * 첫째 오류는 타잎이 맞지 않아서: int와 byte는 타잎이 맞지 않는다.\n",
-    "    * 두번째는 메모리 크기가 맞지 않아서: byte는 8bit라서 0~255까지의 수를 저장, 따라서 정수 256은 표현할 수 없다."
+    "    * 두번째는 메모리 크기가 맞지 않아서: byte는 8bit라서 -128~127까지의 수를 저장, 따라서 정수 128은 표현할 수 없다."
    ]
   },
   {
@@ -1551,7 +1554,8 @@
       "\r\n",
       " y=x;\r\n",
       "|  Error:\r\n",
-      "|  incompatible types: possible lossy conversion from int to byte\r\n",
+      "|  cannot find symbol\r\n",
+      "|    symbol:   variable x\r\n",
       "|  y=x;\r\n",
       "|    ^\r\n",
       "\r\n"
@@ -1611,12 +1615,12 @@
     "collapsed": true
    },
    "source": [
-    "* 왜 출력되는 값이 왔다 갔다 하나..."
+    "* byte의 범위가 -128~127이므로 오류가 발생한다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1626,8 +1630,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " x=128;\r\n",
-      "|  Variable x has been assigned the value 128\r\n",
+      " byte x=(byte)128;\r\n",
+      "|  Modified variable x of type byte with initial value -128\r\n",
+      "|    Update overwrote variable x\r\n",
       "\r\n",
       " y=(byte)x;\r\n",
       "|  Variable y has been assigned the value -128\r\n",
@@ -1639,14 +1644,124 @@
     }
    ],
    "source": [
-    "x=128;\n",
+    "byte x=(byte)128;\n",
     "y=(byte)x;\n",
     "System.out.println(y);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Byte.MAX_VALUE;\r\n",
+      "|  Expression value is: 127\r\n",
+      "|    assigned to temporary variable $17 of type byte\r\n",
+      "\r\n",
+      " Byte.MIN_VALUE;\r\n",
+      "|  Expression value is: -128\r\n",
+      "|    assigned to temporary variable $18 of type byte\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Byte.MAX_VALUE;\n",
+    "Byte.MIN_VALUE;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " System.out.printf(\"size:%-2s min:%-20s max:%s\\n\",Byte.SIZE,Byte.MIN_VALUE,Byt \r",
+      "e.MAX_VALUE);\r\n",
+      "size:8  min:-128                 max:127\r\n",
+      "|  Expression value is: java.io.PrintStream@4f7d0008\r\n",
+      "|    assigned to temporary variable $3 of type PrintStream\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "System.out.printf(\"size:%-2s min:%-20s max:%s\\n\",Byte.SIZE,Byte.MIN_VALUE,Byte.MAX_VALUE);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* array of primitives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " int[] a=new int[2];\r\n",
+      "|  Added variable a of type int[] with initial value [I@2f686d1f\r\n",
+      "\r\n",
+      " a[0]=1;\r\n",
+      "|  Expression value is: 1\r\n",
+      "|    assigned to temporary variable $6 of type int\r\n",
+      "\r\n",
+      " a[1]=2;\r\n",
+      "|  Expression value is: 2\r\n",
+      "|    assigned to temporary variable $7 of type int\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "int[] a=new int[2];\n",
+    "a[0]=1;\n",
+    "a[1]=2;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.6.2 reference\n",
+    "\n",
+    "* 예를 들어, int는 16 비트를 사용하고, 이 전체를 읽으면 값을 사용할 수 있다.\n",
+    "* 그러나 객체는 메모리의 크기를 알 수 없다. 따라서 참조를 사용해야 한다.\n",
+    "* 참조는 객체가 저장되어 있는 메모리의 일정 부분을 가리키고 있다.\n",
+    "* 참조를 사용하는 경우는, 객체, wrapper class, 객체의 배열 (an array of reference)이다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* String객체는 해당하는 primitive가 없다. 문자의 배열이라 그 크기를 모른다.\n",
+    "* 'hello' 객체는 선언하는 시점에 그 크기를 알 수가 없다.\n",
+    "* \"Hello\"라는 값을 넣으면 5개의 문자가 저장되었다는 것을 비로서 알 수 있고, 메모리 크기를 정할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -1656,14 +1771,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " String hello=\"Hello\"\r\n",
-      "|  Added variable hello of type String with initial value \"Hello\"\r\n",
+      " String hello=\"Hello\";\r\n",
+      "|  Modified variable hello of type String with initial value \"Hello\"\r\n",
+      "|    Update overwrote variable hello\r\n",
       "\r\n"
      ]
     }
    ],
    "source": [
-    "String hello=\"Hello\""
+    "String hello=\"Hello\";"
    ]
   },
   {
@@ -1732,14 +1848,47 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "### 2.6.2 reference\n",
-    "\n",
-    "* primitive\n",
-    "* reference\n",
-    "* array"
+    "* 숫자 1을 i객체에 저장했다.\n",
+    "* 이는 앞서 primitive를 사용해서 저장하는 것과 데이터는 '1'로 동일하지만, 다르다. i는 객체이다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Integer i=new Integer(1);\r\n",
+      "|  Added variable i of type Integer with initial value 1\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Integer i=new Integer(1);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "* 객체 참조의 이해"
    ]
   },
   {
@@ -2271,10 +2420,10 @@
     "collapsed": true
    },
    "source": [
-    "###  pass-by-value, pass-by-reference (hfj:78)\n",
+    "###  값과 객체를 함수에 넘겨주기 (hfj:78)\n",
     "\n",
     "* 문자를 넘겨 받아서 이름 출력하기\n",
-    "* 객체를 넘겨 받아서 이름 출력하기"
+    "* 객체를 넘겨 받아서 이름 출력하기\n"
    ]
   },
   {
@@ -2325,12 +2474,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "* 객체를 넘겨 받아서 이름 출력하기"
    ]
