--- a/j_2_3_hello_class.ipynb
+++ b/j_2_3_hello_class.ipynb
@@ -1383,14 +1383,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "* getWeight()를 private"
+    "* getWeight()를 private으로 해 놓으면 그 함수를 자신 외에는 누구도 사용할 수 없다.\n",
+    "* 즉, 클래스 내부에서만 사용할 수 있다."
    ]
   },
   {
@@ -1491,9 +1490,9 @@
     "\n",
     "* 아래와 같이 메모리의 크기가 정해져 있다.\n",
     "* 모든 primitive type에 대응되는 클래스가 있다. 이를 'wrapper class'라고 한다.\n",
-    "    * 단 string은 primitive가 없다. '문자열'은 문자의 배열이라 그 크기를 알 수 없기 때문이다.\n",
+    "    * 단 String 클래스는 primitive가 없다. '문자열'은 문자의 배열이라 그 크기를 알 수 없기 때문이다.\n",
     "\n",
-    "종류 | 메모리 크기 (bits) | 최소~최대 | Wrapper class\n",
+    "종류 | 메모리 크기 (bits) | 최소~최대 | Wrapper classes\n",
     "-----|-----|-----|-----\n",
     "boolean\t| 8 | TF (2개 값만 필요하지만 8bits 사용) | Boolean\n",
     "char\t| 16 | 0~65535 | Character\n",
@@ -1511,10 +1510,12 @@
     "collapsed": true
    },
    "source": [
-    "* casting\n",
-    "    * 메모리가 큰 타잎을 적은 타잎에 넣으려고 하면, 오류\n",
-    "    * 첫째 오류는 타잎이 맞지 않아서: int와 byte는 타잎이 맞지 않는다.\n",
-    "    * 두번째는 메모리 크기가 맞지 않아서: byte는 8bit라서 -128~127까지의 수를 저장, 따라서 정수 128은 표현할 수 없다."
+    "* 메모리가 큰 타잎을 적은 타잎에 넣는 경우, 오류가 발생한다.\n",
+    "    * int (32 bits)를 byte (8 bits)로 넣는 경우, 데이터가 손실될 수 있다.\n",
+    "    * byte가 사용하는 8 bits 범위 -128~127를 초과하는 수 128을 사용하면 표현할 수 없다.\n",
+    "* casting 형변환\n",
+    "    * 큰 타잎에서 적은 타잎은 분명하게 형변환을 해야 한다.\n",
+    "    * 그러나 반대의 경우, 적은 타잎에서 큰 타잎으로의 형변환은 자동으로 일어난다."
    ]
   },
   {
@@ -1542,7 +1543,8 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1565,6 +1567,17 @@
    "source": [
     "byte y;\n",
     "y=x;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "* 형변환을 괄호 안에 적어서 해준다."
    ]
   },
   {
@@ -1701,10 +1714,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "* int(32 bits)에서 double(64 bits)로 변경된다. 형변환은 자동으로 된다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " int a=123;\r\n",
+      "|  Added variable a of type int with initial value 123\r\n",
+      "\r\n",
+      " double b;\r\n",
+      "|  Added variable b of type double\r\n",
+      "\r\n",
+      " b=a;\r\n",
+      "|  Variable b has been assigned the value 123.0\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "int a=123;\n",
+    "double b;\n",
+    "b=a;"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* array of primitives"
+    "* 배열에 primitives를 저장할 수 있다."
    ]
   },
   {
@@ -1881,12 +1934,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "* 객체 참조의 이해"
    ]
@@ -2291,6 +2342,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "* 함수를 호출한다.\n",
+    "    * 함수 인자 3과 4는 int이다. double로 형변환이 (자동으로) 일어나고 있다.\n",
+    "    * 결과는 int가 아닌 double 4.0로 출력된다."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {
     "collapsed": false
@@ -2368,14 +2432,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "* 구조적 함수 - 흐름을 중간에 끝내지 않는 것이 좋다. 반환은 한 번만 한다."
+    "* 구조적 함수\n",
+    "    * 흐름을 중간에 끝내지 않는 것이 좋다. 반환은 한 번만 한다.\n",
+    "    * break, continue, goto 이런 명령어는 명령문 실행순서를 뒤바꾸게 된다."
    ]
   },
   {
@@ -2772,7 +2836,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 문제 : 삼각형 클래스를 만들고, 면적을 계산하기\n",
+    "## 문제 2-5: 삼각형 클래스를 만들고, 면적을 계산하기\n",
     "\n",
     "* 면적을 계산하는 함수를 설계해 본다.\n",
     "    * 면적을 계산하는 함수의 이름은?\n",
@@ -2825,10 +2889,246 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " public class Rectangle {\r\n",
+      "     private int width;\r\n",
+      "     private int height;\r\n",
+      "     public Rectangle(int w, int h) {\r\n",
+      "         this.width=w;\r\n",
+      "         this.height=h;\r\n",
+      "     }\r\n",
+      "     public int getWidth() {\r\n",
+      "         return width;\r\n",
+      "     }\r\n",
+      "     public int getHeight() {\r\n",
+      "         return height;\r\n",
+      "     }\r\n",
+      "     public int calcArea() {\r\n",
+      "         return width*height;\r\n",
+      "     }\r\n",
+      " }\r\n",
+      "|  Warning:\r\n",
+      "|  Modifier 'public'  not permitted in top-level declarations, ignored\r\n",
+      "|  public class Rectangle {\r\n",
+      "|  ^----^\r\n",
+      "|  Modified class Rectangle this error is corrected: \r\n",
+      "|      Modifier 'public'  not permitted in top-level declarations, ignored\r\n",
+      "|      public class Rectangle {\r\n",
+      "|      ^----^\r\n",
+      "|    Update overwrote class Rectangle\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Rectangle {\n",
+    "    private int width;\n",
+    "    private int height;\n",
+    "    public Rectangle(int w, int h) {\n",
+    "        this.width=w;\n",
+    "        this.height=h;\n",
+    "    }\n",
+    "    public int getWidth() {\n",
+    "        return width;\n",
+    "    }\n",
+    "    public int getHeight() {\n",
+    "        return height;\n",
+    "    }\n",
+    "    public int calcArea() {\n",
+    "        return width*height;\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Rectangle r=new Rectangle(3,4);\r\n",
+      "|  Added variable r of type Rectangle with initial value Rectangle@57fffcd7\r\n",
+      "\r\n",
+      " r.calcArea()\r\n",
+      "|  Expression value is: 12\r\n",
+      "|    assigned to temporary variable $7 of type int\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Rectangle r=new Rectangle(3,4);\n",
+    "r.calcArea();"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 문제 2-: 문장을 생성하기 phase-o-matic\n",
+    "* 사각형의 너비, 높이를 변경하는 함수를 넣어 본다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " public class Rectangle {\r\n",
+      "     private int width;\r\n",
+      "     private int height;\r\n",
+      "     public Rectangle(int w, int h) {\r\n",
+      "         this.width=w;\r\n",
+      "         this.height=h;\r\n",
+      "     }\r\n",
+      "     public int getWidth() {\r\n",
+      "         return width;\r\n",
+      "     }\r\n",
+      "     public int getHeight() {\r\n",
+      "         return height;\r\n",
+      "     }\r\n",
+      "     public void setHeight(int h) {\r\n",
+      "         height=h;\r\n",
+      "     }\r\n",
+      "     public void setWidth(int newWidth){\r\n",
+      "         width = newWidth;\r\n",
+      "     }\r\n",
+      "     public void setSize(int w, int h){\r\n",
+      "         setWidth(w);\r\n",
+      "         setHeight(h);\r\n",
+      "     }\r\n",
+      "     public int calcArea() {\r\n",
+      "         return width*height;\r\n",
+      "     }\r\n",
+      " }\r\n",
+      "|  Warning:\r\n",
+      "|  Modifier 'public'  not permitted in top-level declarations, ignored\r\n",
+      "|  public class Rectangle {\r\n",
+      "|  ^----^\r\n",
+      "|  Replaced class Rectangle this error is corrected: \r\n",
+      "|      Modifier 'public'  not permitted in top-level declarations, ignored\r\n",
+      "|      public class Rectangle {\r\n",
+      "|      ^----^\r\n",
+      "|    Update replaced variable r, reset to null\r\n",
+      "|    Update overwrote class Rectangle\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Rectangle {\n",
+    "    private int width;\n",
+    "    private int height;\n",
+    "    public Rectangle(int w, int h) {\n",
+    "        this.width=w;\n",
+    "        this.height=h;\n",
+    "    }\n",
+    "    public int getWidth() {\n",
+    "        return width;\n",
+    "    }\n",
+    "    public int getHeight() {\n",
+    "        return height;\n",
+    "    }\n",
+    "    public void setHeight(int h) {\n",
+    "        height=h;\n",
+    "    }\n",
+    "    public void setWidth(int newWidth){\n",
+    "        width = newWidth;\n",
+    "    }\n",
+    "    public void setSize(int w, int h){\n",
+    "        setWidth(w);\n",
+    "        setHeight(h);\n",
+    "    }\n",
+    "    public int calcArea() {\n",
+    "        return width*height;\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Rectangle r=new Rectangle(3,4);\r\n",
+      "|  Added variable r of type Rectangle with initial value Rectangle@57fffcd7\r\n",
+      "\r\n",
+      " r.calcArea()\r\n",
+      "|  Expression value is: 12\r\n",
+      "|    assigned to temporary variable $7 of type int\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Rectangle r=new Rectangle(3,4);\n",
+    "r.calcArea();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Rectangle r=new Rectangle(3,4);\r\n",
+      "|  Modified variable r of type Rectangle with initial value Rectangle@25bbe1b6\r\n",
+      "|    Update overwrote variable r\r\n",
+      "\r\n",
+      " System.out.println(\"면적: \"+r.calcArea());\r\n",
+      "면적: 12\r\n",
+      "\r\n",
+      " r.setSize(4,5);\r\n",
+      "\r\n",
+      " System.out.println(\"면적: \"+r.calcArea());\r\n",
+      "면적: 20\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Rectangle r=new Rectangle(3,4);\n",
+    "System.out.println(\"면적: \"+r.calcArea());\n",
+    "r.setSize(4,5);\n",
+    "System.out.println(\"면적: \"+r.calcArea());"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 문제 2-6: 문장을 생성하기 phase-o-matic\n",
     "\n",
     "* hfj ch01/PhraseOMatic.java\n",
     "* 변수는 하나를 저장하면, 다른 것은 저장하지 못한다. 2번째 저장하면 덮어쓴다.\n",
