--- a/j_2_3_hello_class.ipynb
+++ b/j_2_3_hello_class.ipynb
@@ -1901,12 +1901,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "* 숫자 1을 i객체에 저장했다.\n",
     "* 이는 앞서 primitive를 사용해서 저장하는 것과 데이터는 '1'로 동일하지만, 다르다. i는 객체이다."
@@ -2341,12 +2339,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "* 함수를 호출한다.\n",
     "    * 함수 인자 3과 4는 int이다. double로 형변환이 (자동으로) 일어나고 있다.\n",
@@ -2735,7 +2731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -2744,23 +2740,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " int sizeOfRect(int width, int height) {\r\n",
+      " int calcAreaOfRectangle(int width, int height) {\r\n",
       "     return width*height;\r\n",
       " }\r\n",
-      "|  Added method sizeOfRect(int,int)\r\n",
+      "|  Added method calcAreaOfRectangle(int,int)\r\n",
       "\r\n"
      ]
     }
    ],
    "source": [
-    "int sizeOfRect(int width, int height) {\n",
+    "int calcAreaOfRectangle(int width, int height) {\n",
     "    return width*height;\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -2769,15 +2765,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " sizeOfRect(4,5);\r\n",
+      " calcAreaOfRectangle(4,5);\r\n",
       "|  Expression value is: 20\r\n",
-      "|    assigned to temporary variable $9 of type int\r\n",
+      "|    assigned to temporary variable $3 of type int\r\n",
       "\r\n"
      ]
     }
    ],
    "source": [
-    "sizeOfRect(4,5);"
+    "calcAreaOfRectangle(4,5);"
    ]
   },
   {
@@ -2791,7 +2787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -2800,14 +2796,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " int size=sizeOfRect(4,5);\r\n",
+      " int size=calcAreaOfRectangle(4,5);\r\n",
       "|  Added variable size of type int with initial value 20\r\n",
       "\r\n"
      ]
     }
    ],
    "source": [
-    "int size=sizeOfRect(4,5);"
+    "int size=calcAreaOfRectangle(4,5);"
    ]
   },
   {
@@ -2836,13 +2832,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 문제 2-5: 삼각형 클래스를 만들고, 면적을 계산하기\n",
+    "## 문제 2-5: 사각형 클래스를 만들고, 면적을 계산하기\n",
     "\n",
-    "* 면적을 계산하는 함수를 설계해 본다.\n",
-    "    * 면적을 계산하는 함수의 이름은?\n",
-    "    * 면적을 계산하는 함수의 가시성?\n",
-    "    * 면적을 계산하는 함수의 매개변수는?\n",
-    "    * 면적을 계산한 후 결과 값을 반환?"
+    "* 클래스를 설계해 보기\n",
+    "    * 클래스 후보 생각해보기\n",
+    "        * 클래스 후보는 명사에서 고른다 (함수프로그래밍은 동사)\n",
+    "            * 클래스 후보: 사각형, 클래스, 면적\n",
+    "            * 클래스: 사각형\n",
+    "            * 면적은 값만 가지고 있기 때문에 클래스가 될 수 없고, 속성 후보가 된다.\n",
+    "    * 속성\n",
+    "        * 너비, 높이를 속성으로 넣는다.\n",
+    "        * 그러나 면적은 속성으로 포함시키지 않는다. 너비와 높이에서 유추할 수 있기 때문이다.\n",
+    "        * 가시성은?\n",
+    "    * 면적을 계산하는 함수를 설계해 본다.\n",
+    "        * 면적을 계산하는 함수의 이름은?\n",
+    "        * 면적을 계산하는 함수의 가시성?\n",
+    "        * 면적을 계산하는 함수의 매개변수는?\n",
+    "        * 면적을 계산한 후 결과 값을 반환?\n"
    ]
   },
   {
@@ -2883,6 +2889,7 @@
     "class Rectangle {\n",
     "    -width:int\n",
     "    -height:int\n",
+    "    +Rectangle(w:int, h:int)\n",
     "    +calcArea():int\n",
     "}\n",
     "@enduml"
