--- a/j_2_3_hello_class.ipynb
+++ b/j_2_3_hello_class.ipynb
@@ -23,7 +23,7 @@
     "* 문제 2-2: 지하철 클래스를 만들고, 몇 호선인지 정해서 운행하기\n",
     "* 문제 2-3: 커피 원산지를 넣어서, 객체를 생성할 때 원산지를 가지고 있도록 구현한다.\n",
     "* 문제 2-4: 몸무게를 자신 이외에는 알 수 없도록 구현한다.\n",
-    "* 문제 2-5: 삼각형 클래스를 만들고, 면적을 계산하기\n",
+    "* 문제 2-5: 사각형 클래스를 만들고, 면적을 계산하기\n",
     "* 문제 2-6: 문장을 생성하기 phase-o-matic\n",
     "* 미니 프로젝트 문제: dice game\n"
    ]
@@ -1714,12 +1714,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "* int(32 bits)에서 double(64 bits)로 변경된다. 형변환은 자동으로 된다."
    ]
@@ -1797,7 +1795,7 @@
    "source": [
     "### 2.6.2 reference\n",
     "\n",
-    "* 예를 들어, int는 16 비트를 사용하고, 이 전체를 읽으면 값을 사용할 수 있다.\n",
+    "* 예를 들어, int는 16 비트를 사용하고, 이 전체를 읽서어서 값을 사용한다.\n",
     "* 그러나 객체는 메모리의 크기를 알 수 없다. 따라서 참조를 사용해야 한다.\n",
     "* 참조는 객체가 저장되어 있는 메모리의 일정 부분을 가리키고 있다.\n",
     "* 참조를 사용하는 경우는, 객체, wrapper class, 객체의 배열 (an array of reference)이다."
@@ -2852,6 +2850,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "* 생각해 볼 문제\n",
+    "    * 'calcArea'함수는 위 'calcAreaOfRectangle'함수와 기능은 같지만 이름은 왜 다를까?\n",
+    "        * 개체지향은 함수명에서 '...OfRectangle'을 생략할 수 있다.\n",
+    "        * 예를 들어, 삼각형의 면적을 계산할 경우:\n",
+    "            * 객체지향은 삼각형 객체의 동일한 이름을 가진 함수를 사용하게 된다.\n",
+    "            * 함수방식은 'calcAreaOfTriangle'이라고 명명하게 된다.\n",
+    "            * 이런 차이는 함수를 사용할 때 객체지향이 보다 편리하게 된다. 또한 다형성을 사용할 수 있게 된다.\n",
+    "    * 'calcArea'함수는 위 'calcAreaOfRectangle'함수와 기능은 같지만 인자는 왜 다를까?\n",
+    "        * 객체지향은 데이터를 가지고 있기 때문이다. 자신의 데이터를 사용하여 면적을 계산한다.\n",
+    "    * 너비, 높이를 변경하는 함수를 만들면 생성자의 너비, 높이를 사용하지 않을 수 있다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -3135,7 +3151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 문제 2-6: 문장을 생성하기 phase-o-matic\n",
+    "## 문제 2-6: 문장을 생성하기 phrase-o-matic\n",
     "\n",
     "* hfj ch01/PhraseOMatic.java\n",
     "* 변수는 하나를 저장하면, 다른 것은 저장하지 못한다. 2번째 저장하면 덮어쓴다.\n",
@@ -3249,9 +3265,15 @@
     "    * 2사람이 게임을 한다.\n",
     "    * 주사위를 각 1번씩 던진다.\n",
     "    * 큰 수가 나온 사람이 이긴다.\n",
-    "    * 이긴 사람의 이름을 출력한다.\n",
+    "    * 이긴 사람의 이름을 출력한다. (과제에서는 이긴 사람에게 점수를 주고, 점수 순으로 출력한다)\n",
     "\n",
-    "* hfj chap02를 수정"
+    "* 추가 요구사항\n",
+    "    * 화면을 만든다 (GUI는 강의 후반부에 학습).\n",
+    "    * 게임 Player의 이름을 입력 받는다.\n",
+    "    * 주사위는 2번 던진다.\n",
+    "    * 이긴 사람은 점수를 받는다.\n",
+    "    * 경기 시간, players, 점수를 기록하고 정렬하여 순서대로 출력한다.\n",
+    "    * 윷놀이를 할 수 있다. (상속)"
    ]
   },
   {
@@ -3259,6 +3281,48 @@
    "metadata": {},
    "source": [
     "### dice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import iplantuml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg height=\"90px\" style=\"width:105px;height:90px;\" version=\"1.1\" viewBox=\"0 0 105 90\" width=\"105px\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"><defs><filter height=\"300%\" id=\"f1\" width=\"300%\" x=\"-1\" y=\"-1\"><feGaussianBlur result=\"blurOut\" stdDeviation=\"2.0\"/><feColorMatrix in=\"blurOut\" result=\"blurOut2\" type=\"matrix\" values=\"0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 .4 0\"/><feOffset dx=\"4.0\" dy=\"4.0\" in=\"blurOut2\" result=\"blurOut3\"/><feBlend in=\"SourceGraphic\" in2=\"blurOut3\" mode=\"normal\"/></filter></defs><g><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"73.6094\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"90\" x=\"6\" y=\"8\"/><ellipse cx=\"34.95\" cy=\"24\" fill=\"#ADD1B2\" rx=\"11\" ry=\"11\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><path d=\"M37.9188,29.6406 Q37.3406,29.9375 36.7,30.0859 Q36.0594,30.2344 35.3563,30.2344 Q32.8563,30.2344 31.5359,28.5859 Q30.2156,26.9375 30.2156,23.8125 Q30.2156,20.6875 31.5359,19.0313 Q32.8563,17.375 35.3563,17.375 Q36.0594,17.375 36.7078,17.5313 Q37.3563,17.6875 37.9188,17.9844 L37.9188,20.7031 Q37.2938,20.125 36.7,19.8516 Q36.1063,19.5781 35.4813,19.5781 Q34.1375,19.5781 33.45,20.6484 Q32.7625,21.7188 32.7625,23.8125 Q32.7625,25.9063 33.45,26.9766 Q34.1375,28.0469 35.4813,28.0469 Q36.1063,28.0469 36.7,27.7734 Q37.2938,27.5 37.9188,26.9219 L37.9188,29.6406 Z \"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"12\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"27\" x=\"52.05\" y=\"28.1543\">Dice</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"7\" x2=\"95\" y1=\"40\" y2=\"40\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"78\" x=\"12\" y=\"54.2104\">number:int=0</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"7\" x2=\"95\" y1=\"60.8047\" y2=\"60.8047\"/><ellipse cx=\"17\" cy=\"72.707\" fill=\"#84BE84\" rx=\"3\" ry=\"3\" style=\"stroke: #038048; stroke-width: 1.0;\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"53\" x=\"26\" y=\"75.0151\">roll():void</text></g></svg>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.SVG object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%plantuml\n",
+    "@startuml\n",
+    "class Dice {\n",
+    "    number:int=0\n",
+    "    +roll():void\n",
+    "}\n",
+    "@enduml"
    ]
   },
   {
@@ -3290,7 +3354,7 @@
     "    int number = 0;\n",
     "    public void roll() {   \n",
     "        number = (int) (Math.random() * 6);\n",
-    "        System.out.println(\"Turn on \" + number);\n",
+    "        System.out.println(\"turns on \" + number);\n",
     "    }   \n",
     "}"
    ]
@@ -3341,17 +3405,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import iplantuml"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": false
@@ -3374,10 +3427,15 @@
    "source": [
     "%%plantuml\n",
     "@startuml\n",
-    "class Player\n",
     "class Dice {\n",
     "    number:int\n",
     "    +roll():void\n",
+    "}\n",
+    "class Player {\n",
+    "    name:String\n",
+    "    num:int=0\n",
+    "    +Player(n:String)\n",
+    "    +play():void\n",
     "}\n",
     "Player .right.> Dice\n",
     "@enduml"
@@ -3716,14 +3774,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Java 9",
-   "language": "java",
-   "name": "java"
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
   },
   "language_info": {
-   "file_extension": ".class",
-   "mimetype": "application/java-vm",
-   "name": "java"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
