--- a/j_4_package.ipynb
+++ b/j_4_package.ipynb
@@ -32,7 +32,9 @@
     "\n",
     "* 패키지는 (1) 클래스를 구조화하고, (2) 이름 충돌을 막기 위해 사용한다.\n",
     "    * 도서관에서 보관하는 책이 늘어나면서 구역을 정해서 정리하듯이, 클래스가 많아지면 이를 구조화해서 정리하는 것이 필요하다.\n",
-    "    * 클래스의 이름이 중복이 되면 사용할 수 없게 된다. namespace의 충돌을 막기위해 패키지 명을 사용한다. 도메인을 패키지명으로 사용하면 편리하다.\n",
+    "    * 클래스의 이름이 중복이 되면 사용할 수 없게 된다. namespace의 충돌을 막기위해 패키지 명을 사용한다.\n",
+    "    * url 도메인을 패키지명으로 사용하면 편리하다.\n",
+    "    * 학교를 패키지명으로 정한다면, 'kr.ac'로 시작하여 학교명을 넣는다.\n",
     "* 패키지는 '꾸러미'로 생각한다. 그 안에 클래스를 가지고 있어서, '클래스 라이브러리'라고 한다.\n",
     "    * 패키지의 클래스는 불러와 (import), 사용할 수 있다.\n",
     "    * java.lang 패키지는 자바 언어에 필요한 클래스들 Object, Boolean, Byte, Class, Float, Math...를 가지고 있다.\n",
@@ -69,10 +71,13 @@
     "        ```\n",
     "    \n",
     "    * 윈도우 classpath 설정\n",
-    "        ```\n",
-    "        set classpath=%classpath%;.\\classes;.\n",
-    "        echo %classpath%\n",
-    "        ```\n",
+    "        * 현재 명령창에만 환경변수 유지\n",
+    "            ```\n",
+    "            set classpath=%classpath%;.\\classes;.\n",
+    "            echo %classpath%\n",
+    "            ```\n",
+    "        * 시스템 환경변수를 변경하려면 setx 명령어를 사용한다.\n",
+    "\n",
     "\n",
     "* .class 파일을 찾는 경로 (우선 순위)\n",
     "    1.  \\$JAVA\\_HOME/lib\n",
@@ -145,11 +150,10 @@
     "\n",
     "* jar파일은 archive파일이다. 여러 class 파일을 묶어 jar로 만들 수 있다.\n",
     "* 생성\n",
-    " jar --create --file foo.jar --main-class com.foo.Main --module-version 1.0\n",
-    "     -C foo/ module-info.class\n",
-    "* 어떤 파일이 있는지 보기\n",
-    "* 업데이트\n",
-    "* 실행"
+    "    ```\n",
+    "    jar --create --file foo.jar --main-class com.foo.Main --module-version 1.0\n",
+    "         -C foo/ module-info.class\n",
+    "    ```"
    ]
   },
   {
@@ -262,6 +266,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 도움말 넣기\n",
+    "    * javadoc을 사용하기 편리하도록 @태그를 사용한다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -273,14 +285,6 @@
     "/*************************************************************************\n",
     " * @author jsl\n",
     " * @since 20160307\n",
-    " * to show how to compile with a package\n",
-    " *\n",
-    " * root\n",
-    " *     /src\n",
-    " *     /classes\n",
-    " *  javac -d classes -sourcepath src src/com/sd/hello/HelloWorld.java\n",
-    " *  java -cp .:./classes com/sd/hello/HelloWorld\n",
-    " *\n",
     "*************************************************************************/\n",
     "\n",
     "package com.sd.hello;\n",
@@ -420,7 +424,7 @@
    "execution_count": 3,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -436,6 +440,17 @@
    ],
    "source": [
     "!jar tf hello.jar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "* 실행하기"
    ]
   },
   {
@@ -606,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -616,7 +631,7 @@
      "output_type": "stream",
      "text": [
       " long startTime = System.currentTimeMillis();\r\n",
-      "|  Added variable startTime of type long with initial value 1474554285823\r\n",
+      "|  Added variable startTime of type long with initial value 1475755654608\r\n",
       "\r\n"
      ]
     }
@@ -644,6 +659,31 @@
    ],
    "source": [
     "long estimatedTime = System.currentTimeMillis() - startTime;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " import java.text.DateFormat;\r\n",
+      "\r\n",
+      " DateFormat.getInstance().format(startTime);\r\n",
+      "|  Expression value is: \"10/6/16, 9:07 PM\"\r\n",
+      "|    assigned to temporary variable $3 of type String\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.text.DateFormat;\n",
+    "DateFormat.getInstance().format(startTime);"
    ]
   },
   {
