--- a/j_8_inheritancepolymorphism.ipynb
+++ b/j_8_inheritancepolymorphism.ipynb
@@ -1329,6 +1329,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " class Turtle {\r\n",
+      "     private int nLimbs=4;\r\n",
+      "     protected String food;\r\n",
+      "     public void setFood(String f) {\r\n",
+      "         this.food=f;\r\n",
+      "     }\r\n",
+      "     public void eat() {\r\n",
+      "         System.out.print(\"Turtle eats \"+food);\r\n",
+      "     }   \r\n",
+      " }\r\n",
+      "|  Added class Turtle\r\n",
+      "\r\n",
+      " class SeaTurtle extends Turtle {\r\n",
+      "     public void swim() {\r\n",
+      "         System.out.print(\"A sea turtle swims...\");\r\n",
+      "     }\r\n",
+      " }\r\n",
+      "|  Added class SeaTurtle\r\n",
+      "\r\n",
+      " class LandTurtle extends Turtle {\r\n",
+      "     public void walk() {\r\n",
+      "         System.out.print(\"A land turtle walks...\");\r\n",
+      "     }\r\n",
+      " }\r\n",
+      "|  Added class LandTurtle\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Turtle {\n",
+    "    private int nLimbs=4;\n",
+    "    protected String food;\n",
+    "    public void setFood(String f) {\n",
+    "        this.food=f;\n",
+    "    }\n",
+    "    public void eat() {\n",
+    "        System.out.print(\"Turtle eats \"+food);\n",
+    "    }   \n",
+    "}\n",
+    "class SeaTurtle extends Turtle {\n",
+    "    public void swim() {\n",
+    "        System.out.print(\"A sea turtle swims...\");\n",
+    "    }\n",
+    "}\n",
+    "class LandTurtle extends Turtle {\n",
+    "    public void walk() {\n",
+    "        System.out.print(\"A land turtle walks...\");\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -1486,6 +1549,117 @@
     "\n",
     "Point <|-- Circle\n",
     "@enduml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " class Point {\r\n",
+      "     private int x;\r\n",
+      "     private int y;\r\n",
+      "     public Point() {}\r\n",
+      "     public Point(int xnew, int ynew) {\r\n",
+      "         this.x=xnew;\r\n",
+      "         this.y=ynew;\r\n",
+      "     }\r\n",
+      "     public int getX() {\r\n",
+      "         return x;\r\n",
+      "     }\r\n",
+      "     public int getY() {\r\n",
+      "         return y;\r\n",
+      "     }\r\n",
+      "     public String toString() {\r\n",
+      "         String msg=\"(\"+x+\",\"+y+\")\";\r\n",
+      "         return msg;\r\n",
+      "     }\r\n",
+      " }\r\n",
+      "|  Added class Point\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Point {\n",
+    "    private int x;\n",
+    "    private int y;\n",
+    "    public Point() {}\n",
+    "    public Point(int xnew, int ynew) {\n",
+    "        this.x=xnew;\n",
+    "        this.y=ynew;\n",
+    "    }\n",
+    "    public int getX() {\n",
+    "        return x;\n",
+    "    }\n",
+    "    public int getY() {\n",
+    "        return y;\n",
+    "    }\n",
+    "    public String toString() {\n",
+    "        String msg=\"(\"+x+\",\"+y+\")\";\n",
+    "        return msg;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " class Circle extends Point {\r\n",
+      "     private double radius;\r\n",
+      "     public Circle(){}\r\n",
+      "     public Circle(int xnew, int ynew, double rnew) {\r\n",
+      "         super(xnew, ynew);\r\n",
+      "         this.radius=rnew;\r\n",
+      "     }\r\n",
+      "     public double getRadius() {\r\n",
+      "         return radius;\r\n",
+      "     }\r\n",
+      "     public double getCircumference() {\r\n",
+      "         return 2* Math.PI * getRadius();\r\n",
+      "     }\r\n",
+      "     public double getArea() {\r\n",
+      "         return Math.PI *getRadius()*getRadius();\r\n",
+      "     }\r\n",
+      " }\r\n",
+      "|  Added class Circle\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Circle extends Point {\n",
+    "    private double radius;\n",
+    "    public Circle(){}\n",
+    "    public Circle(int xnew, int ynew, double rnew) {\n",
+    "        super(xnew, ynew);\n",
+    "        this.radius=rnew;\n",
+    "    }\n",
+    "    public double getRadius() {\n",
+    "        return radius;\n",
+    "    }\n",
+    "    public double getCircumference() {\n",
+    "        return 2*Math.PI*getRadius();\n",
+    "    }\n",
+    "    public double getArea() {\n",
+    "        return Math.PI*getRadius()*getRadius();\n",
+    "    }\n",
+    "}"
    ]
   },
   {
@@ -1725,6 +1899,107 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " public interface Shape {\r\n",
+      "     public double calcArea();\r\n",
+      "     public double calcPerimeter();\r\n",
+      " }\r\n",
+      "|  Warning:\r\n",
+      "|  Modifier 'public'  not permitted in top-level declarations, ignored\r\n",
+      "|  public interface Shape {\r\n",
+      "|  ^----^\r\n",
+      "|  Replaced interface Shape this error is corrected: \r\n",
+      "|      Modifier 'public'  not permitted in top-level declarations, ignored\r\n",
+      "|      public interface Shape {\r\n",
+      "|      ^----^\r\n",
+      "|    Update overwrote class Shape\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "public interface Shape {\n",
+    "    public double calcArea();\n",
+    "    public double calcPerimeter();\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " public class Rectangle implements Shape {\r\n",
+      "   private final double width, height, area, perimeter;\r\n",
+      " \r\n",
+      "   public Rectangle(double width, double height) {\r\n",
+      "     this.width = width;\r\n",
+      "     this.height= height;\r\n",
+      "     this.area = width * height;\r\n",
+      "     this.perimeter = 2 * (width + height);\r\n",
+      "   }\r\n",
+      " \r\n",
+      "   @Override\r\n",
+      "   public double calcArea() {\r\n",
+      "     return this.area;\r\n",
+      "   }\r\n",
+      " \r\n",
+      "   @Override\r\n",
+      "   public double calcPerimeter() {\r\n",
+      "     return this.perimeter;\r\n",
+      "   }\r\n",
+      " }\r\n",
+      "|  Warning:\r\n",
+      "|  Modifier 'public'  not permitted in top-level declarations, ignored\r\n",
+      "|  public class Rectangle implements Shape {\r\n",
+      "|  ^----^\r\n",
+      "|  Added class Rectangle this error is corrected: \r\n",
+      "|      Modifier 'public'  not permitted in top-level declarations, ignored\r\n",
+      "|      public class Rectangle implements Shape {\r\n",
+      "|      ^----^\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Rectangle implements Shape {\n",
+    "  private final double width, height, area, perimeter;\n",
+    "\n",
+    "  public Rectangle(double width, double height) {\n",
+    "    this.width = width;\n",
+    "    this.height= height;\n",
+    "    this.area = width * height;\n",
+    "    this.perimeter = 2 * (width + height);\n",
+    "  }\n",
+    "\n",
+    "  @Override\n",
+    "  public double calcArea() {\n",
+    "    return this.area;\n",
+    "  }\n",
+    "\n",
+    "  @Override\n",
+    "  public double calcPerimeter() {\n",
+    "    return this.perimeter;\n",
+    "  }\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -1795,6 +2070,185 @@
     "}\n",
     "Rectangle -right-|> Shape\n",
     "@enduml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " public abstract class Shape {\r\n",
+      "     public String name=\"Shape\";\r\n",
+      "     public abstract double calcArea();\r\n",
+      "     public abstract double calcPerimeter();\r\n",
+      "     public String getName() { return this.name; }\r\n",
+      "     public String toString() {\r\n",
+      "         return \"Shape...\"+super.toString();\r\n",
+      "     }\r\n",
+      " }\r\n",
+      "|  Warning:\r\n",
+      "|  Modifier 'public'  not permitted in top-level declarations, ignored\r\n",
+      "|  public abstract class Shape {\r\n",
+      "|  ^-------------^\r\n",
+      "|  Added class Shape this error is corrected: \r\n",
+      "|      Modifier 'public'  not permitted in top-level declarations, ignored\r\n",
+      "|      public abstract class Shape {\r\n",
+      "|      ^-------------^\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "public abstract class Shape {\n",
+    "    public String name=\"Shape\";\n",
+    "    public abstract double calcArea();\n",
+    "    public abstract double calcPerimeter();\n",
+    "    public String getName() { return this.name; }\n",
+    "    public String toString() {\n",
+    "        return \"Shape...\"+super.toString();\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " public class Rectangle extends Shape {\r\n",
+      "     private final double width, height, area, perimeter;\r\n",
+      " \r\n",
+      "     public Rectangle(double width, double height) {\r\n",
+      "         this.width = width;\r\n",
+      "         this.height= height;\r\n",
+      "         this.area = width * height;\r\n",
+      "         this.perimeter = 2 * (width + height);\r\n",
+      "     }\r\n",
+      "     @Override\r\n",
+      "     public double calcArea() {\r\n",
+      "         return this.area;\r\n",
+      "     }\r\n",
+      "     @Override\r\n",
+      "     public double calcPerimeter() {\r\n",
+      "         return this.perimeter;\r\n",
+      "     }\r\n",
+      "     public String toString() {\r\n",
+      "         return \"Rectangle...\"+super.toString();\r\n",
+      "     }\r\n",
+      " }\r\n",
+      "|  Warning:\r\n",
+      "|  Modifier 'public'  not permitted in top-level declarations, ignored\r\n",
+      "|  public class Rectangle extends Shape {\r\n",
+      "|  ^----^\r\n",
+      "|  Added class Rectangle this error is corrected: \r\n",
+      "|      Modifier 'public'  not permitted in top-level declarations, ignored\r\n",
+      "|      public class Rectangle extends Shape {\r\n",
+      "|      ^----^\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Rectangle extends Shape {\n",
+    "    private final double width, height, area, perimeter;\n",
+    "    public Rectangle(double width, double height) {\n",
+    "        this.width = width;\n",
+    "        this.height= height;\n",
+    "        this.area = width * height;\n",
+    "        this.perimeter = 2 * (width + height);\n",
+    "    }\n",
+    "    @Override\n",
+    "    public double calcArea() {\n",
+    "        return this.area;\n",
+    "    }\n",
+    "    @Override\n",
+    "    public double calcPerimeter() {\n",
+    "        return this.perimeter;\n",
+    "    }\n",
+    "    public String toString() {\n",
+    "        return \"Rectangle...\"+super.toString();\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " public class Circle extends Shape {\r\n",
+      "     private final double radius, area, perimeter;\r\n",
+      " \r\n",
+      "     public Circle(double radius) {\r\n",
+      "         this.radius = radius;\r\n",
+      "         this.area = Math.PI * radius * radius;\r\n",
+      "         this.perimeter = 2 * Math.PI * radius;\r\n",
+      "     }\r\n",
+      "     @Override\r\n",
+      "     public double calcArea() {\r\n",
+      "         return this.area;\r\n",
+      "     }\r\n",
+      "     @Override\r\n",
+      "     public double calcPerimeter() {\r\n",
+      "         return this.perimeter;\r\n",
+      "     }\r\n",
+      "     public String toString() {\r\n",
+      "         return \"Circle...\"+super.toString();\r\n",
+      "     }\r\n",
+      " }\r\n",
+      "|  Warning:\r\n",
+      "|  Modifier 'public'  not permitted in top-level declarations, ignored\r\n",
+      "|  public class Circle extends Shape {\r\n",
+      "|  ^----^\r\n",
+      "|  Added class Circle this error is corrected: \r\n",
+      "|      Modifier 'public'  not permitted in top-level declarations, ignored\r\n",
+      "|      public class Circle extends Shape {\r\n",
+      "|      ^----^\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Circle extends Shape {\n",
+    "    private final double radius, area, perimeter;\n",
+    "\n",
+    "    public Circle(double radius) {\n",
+    "        this.radius = radius;\n",
+    "        this.area = Math.PI * radius * radius;\n",
+    "        this.perimeter = 2 * Math.PI * radius;\n",
+    "    }\n",
+    "    @Override\n",
+    "    public double calcArea() {\n",
+    "        return this.area;\n",
+    "    }\n",
+    "    @Override\n",
+    "    public double calcPerimeter() {\n",
+    "        return this.perimeter;\n",
+    "    }\n",
+    "    public String toString() {\n",
+    "        return \"Circle...\"+super.toString();\n",
+    "    }\n",
+    "}"
    ]
   },
   {
@@ -2118,6 +2572,25 @@
     "* 프로그래밍 요소\n",
     "    * 객체의 배열 - 배열은 원시 타잎, 객체 타잎 모두 저장할 수 있다.\n",
     "    * 다형성 - 객체의 함수를 반복문에서 일괄 호출할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Hello {\n",
+    "    private String name;\n",
+    "    public Hello(String name) {\n",
+    "        this.name=name;\n",
+    "    }\n",
+    "    public void sayHello() {\n",
+    "        System.out.println(\"hello \" + name);\n",
+    "    }\n",
+    "}"
    ]
   },
   {
