--- a/hello_git.ipynb
+++ b/hello_git.ipynb
@@ -30,7 +30,8 @@
     "### 1.1.2 GUI\n",
     "\n",
     "* github에서 제공하는 GitHub Desktop\n",
-    "    * 또는 git \"Upload files\" 기능을 사용할 수 있다. (디렉토리 구성이 안된다)\n",
+    "    * Drag and Drop\n",
+    "        * git \"Upload files\" 기능을 사용할 수 있다. 디렉토리를 업로드할 수 있다.\n",
     "      https://github.com/blog/2105-upload-files-to-your-repositories    \n",
     "* git-scm에서 제공하는 git for winodws\n",
     "* GitKraken, TortoiseGit, SourceTree, SmartGit\n"
