--- a/1_hello_goodsw.ipynb
+++ b/1_hello_goodsw.ipynb
@@ -24,7 +24,7 @@
     "    * 예제로 배운다 Learn by example\n",
     "        * 예제는 쉽지만, 너무 쉽지 않고 재미있게\n",
     "    * 그림으로 배운다 UML\n",
-    "    * 디자인패턴 모든 것을 가르치지는 않는다. 이 강의를 마치고 나면, 자기학습을 해 나갈 수 있다.\n",
+    "    * 디자인패턴 모든 것을 가르치지는 않는다. 강의를 마치고 나면, 자기학습을 해 나갈 수 있다.\n",
     "\n",
     "### 1.1.2 목표\n",
     "\n",
@@ -34,12 +34,16 @@
     "### 1.1.3 문제\n",
     "\n",
     "* 문제 1-1: 상속을 사용하여 거북이 upcasting, downcasting\n",
-    "* 문제 1-2: 좋은 소프트웨어 원칙에 따르면, 위 문제의 프로그램이 적합한지 설명"
+    "* 문제 1-2: 좋은 소프트웨어 원칙에 비추어 위 문제의 프로그램이 적합한지 설명"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## 1.2 SW 왜 문제인가?\n",
     "\n",
@@ -52,17 +56,27 @@
     "    * SW개발 속도가 HW개발을 따라가지 못함.\n",
     "        * 계획된 SW납기를 맞추지 못한다.\n",
     "        * 계획된 SW인력보다 많이 필요해서 밤샘을 해야 한다.\n",
-    "        * SW품질을 맞추지 못한다.\n",
-    "\n",
+    "        * SW품질을 맞추지 못한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "### 1.2.2 SW 품질\n",
     "\n",
     "#### 1.2.2.1 건축에 비유\n",
     "\n",
     "- 집을 건축한다고 하자. 어떻게 그 품질을 판단하는가?\n",
-    "- 방을 계획보다 1개 적게 만들었다?\n",
-    "- 이사할 일자를 맞추지 못한다?\n",
-    "- 계획한 예산보다 비용이 많이 들었다?\n",
-    "- 설계와 같이 잘 만들었어도, 납기 및 비용도 중요하다.\n",
+    "- 방을 계획보다 1개 적게 만들었다? 설계에 어긋나는 중대한 결함이다.\n",
+    "- 설계를 준수하여 만들었다고 해도:\n",
+    "    * 이사 일자를 맞추지 못한다?\n",
+    "    * 계획한 예산보다 비용이 많이 소요되었다?\n",
+    "- 설계를 준수하여 잘 만들었어도, 납기 및 비용도 중요하다.\n",
     "\n",
     "#### 1.2.2.2 SW로 돌아와서\n",
     "\n",
@@ -74,15 +88,24 @@
     "        * 정해진 노력으로 하지 못하면 밤을 새워야 한다.\n",
     "    * 정해진 요구사항?\n",
     "        * 사용자가 원하는 기능을 말한다. 개발자가 원하는 기능이 아니다!\n",
-    "- 건축은 눈으로 보이지만, SW는 보이지 않는 제품이라 '좋은지?' 판단하기 더욱 어려운 문제이다.\n",
-    "\n",
+    "- 건축은 눈으로 보이지만, SW는 보이지 않는 제품이라 '좋은지?' 판단하기 더욱 어려운 문제이다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "### 1.2.3 SW 심각성\n",
     "\n",
     "- SW가 대형화하면서 더욱 위기가 심각\n",
     "    * 대기업 프로그램을 10,000,000 LOC라고 하면 700권\n",
-    "        * 1 페이지에 50문장이라면, 20만 페이지\n",
-    "        * 책 한 권을 300페이지라면, 약 700권\n",
-    "        * 프로그램 700권! 방의 온 벽면을 채우고도 남을 분량!\n",
+    "        * 1 페이지에 50문장이 담길 수 있다면, 20만 페이지에 달한다.\n",
+    "        * 책 한 권이 300페이지라면, 약 700권\n",
+    "        * 프로그램 700권! 방의 벽면을 채우고도 남을 분량!\n",
     "    * 개발비용은 1 LOC에 3만원이라고 하면 3천억원\n",
     "        * 단순 한 줄 프로그래밍이 아니라 + 요구분석 + 설계 + 테스트 + 문서화 + 인수 모두 포함\n",
     "- SW대형화로 인한 문제\n",
@@ -111,7 +134,7 @@
     "\n",
     "### 1.3.1 Good SW란 무엇인가?\n",
     "\n",
-    "- 좋은 차가 무엇인가?\n",
+    "- 좋은 차란 무엇인가?\n",
     "    * 가격? 색상? 엔진?\n",
     "    * 좋은 차는 눈에 보이는 것을 판단하므로 비교적 쉽다.\n",
     "- 좋은 사람은? 좋은 SW? 눈에 보이지 않는 특성.\n",
@@ -124,7 +147,7 @@
     "- 재사용에 초점\n",
     "    * SW위기의 핵심은 HW가 아니라 SW!\n",
     "    * 신규개발과 유지보수\n",
-    "        * SW도 수명이 있다. 보통 10살을 살기 힘들다. 강아지보다 짧은 수명을 가진다.\n",
+    "        * SW도 수명이 있다. 보통 10년을 넘기 힘들다. 강아지보다 짧은 수명을 가진다.\n",
     "        * 수명을 짧게 하는 이유는 (사람이) 고치기 힘든 소스코드. HW를 힘들게 하는 소스코드 때문이 아니다!\n",
     "            * 중복\n",
     "            * 전역변수의 사용\n",
@@ -132,8 +155,17 @@
     "    * 좋은 SW는 만들어 놓으면\n",
     "        * 중복이 없고, 수정하기 쉽고\n",
     "        * 이해하기 쉬어서, 수정하기 쉽고\n",
-    "        * 다른 사람이 가져다 쓰기 편리하고\n",
-    "\n",
+    "        * 다른 사람이 가져다 쓰기 편리하고"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "### 1.3.2 Good SW의 설계\n",
     "\n",
     "* Simon 모델\n",
@@ -145,8 +177,17 @@
     "    1. 문제 - Smell? 좋은 SW관점에서 바라볼 때 문제가 될 수 있는지 따져보고\n",
     "    2. 대안 - 문제를 해결할 수 있는 방법은 무엇인지\n",
     "    3. 평가 - 문제가 얼마나 해결되는지\n",
-    "    4. 선택 - 평가에 따라 문제를 해결하는 방법을 선택\n",
-    "\n",
+    "    4. 선택 - 평가에 따라 문제를 해결하는 방법을 선택"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "### 1.3.3 좋은 생각에서 출발\n",
     "\n",
     "* 좋은 SW가 시장에서 비싼 가격으로 팔리지 않을 수 있다. 눈에 보이지 않는 제품의 특성.\n",
@@ -158,64 +199,74 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## 1.4 객체지향\n",
     "\n",
-    "* 왜 객체지향?\n",
-    "    * SW Crisis를 해결하는 방안으로 패러다임이 변화\n",
-    "    * SW비용을 줄이려는 방법은 개발자가 빠르게, 보다 잘 할 수 있게 -> 객체지향으로의 패러다임 변화\n",
+    "### 1.4.1 왜 객체지향?\n",
+    "* SW Crisis를 해결하는 방안으로 패러다임이 변화\n",
+    "* SW비용을 줄이려는 방법은 개발자가 빠르게, 보다 잘 할 수 있게 -> 객체지향으로의 패러다임 변화\n",
     "* 객체지향 특징을 이해해야 한다.\n",
     "    * 비객체지향과 비교해서 무엇이 다른지? 즉 어떤 점이 프로그래밍을 향상하는지 이해.\n",
-    "    * 무엇보다, 상속을 깊이 이해해야 한다.\n",
+    "    * 공통부분을 재사용하는 방법으로서,상속을 잘 이해할 필요가 있다.\n",
     "        * 언제 사용하는지?\n",
     "        * 언제 사용해서는 안되는지?\n",
-    "    \n",
-    "* 상속\n",
-    "    * specialization/generalization (Animal - Dog, Cat)\n",
-    "    * 상속의 경우\n",
-    "        * 클래스 상속 (보통 클래스, 추상클래스)\n",
-    "        * 인터페이스 상속\n",
-    "    * Interface와 Abstract Class차이?\n",
-    "        * interface는 marker 역할. 구현할 클래스의 시그니처만 정해 놓는다.\n",
-    "        * abstract class는 구현하지 않는 함수를 가지게 된다.\n",
-    "\n",
-    "* overriding vs overloading\n",
-    "    * 상속을 사용하면 superclass의 함수를 overriding하게 된다.\n",
-    "    * 이 때 overloading과의 차이를 식별해야 한다.\n",
-    "\n",
-    "* 다형성\n",
-    "    * 동적함수호출 DMI(Dynamic Method Invocation)\n",
-    "    * 객체지향프로그래밍을 한다는 것은 상속을 쓰겠다는 것이고,\n",
-    "    * 비객체지향에서 구현하기 어려운 다형성을 활용하겠다는 말이다.\n",
-    "    * 다형성이란 컴파일시점에 선언된 클래스와 다른 객체를 실행시점에\n",
-    "    사용하는 것으로 매우 재미있는 객체지향 프로그램을 만들 수 있게 된다\n",
-    "        * 일반적으로 함수호출은 컴파일시점(compile time)에 결정.\n",
-    "        * 그러나 다형성을 사용하면,\n",
-    "            그 다형적 함수의 호출은 실행시점(run time)으로 결정이 늦춰짐.\n",
-    "        * 이러한 특징을 late binding 또는 dynamic binding이라고 함.\n",
-    "    * 예제 아래 auto변수(객체)는 Sedan Miniva Sportscar 어느 변수(객체)나\n",
-    "        참조가능. 따라서 실행시점에 다형적 함수를 결정해서 호출함\n",
-    "        (overriding한 함수)\n",
-    "\n",
-    "        ```\n",
-    "        Automobile auto = new Sedan(Color.black);\n",
-    "        ```\n",
-    "\n",
-    "        * 컴파일타임 (선언type으로) (overloading함수에 대해)\n",
-    "            * auto.equals(autoObject)의 경우, equals(Object)을 실행\n",
-    "        * 런타임 (실제type에 따라).\n",
-    "            * autoObject.equals의 경우 automobile.equals\n",
-    "            단 upcasting의 경우 (선언 obj <- 실제 auto),\n",
-    "            * subclass 함수는 hidden.\n",
-    "            * 따라서 argument는 감안하지 않음 (p.38)"
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "## 문제 1-1:  상속을 사용하여 거북이 upcasting and downcasting\n",
+    "### 1.4.2 상속\n",
+    "* specialization/generalization (Animal - Dog, Cat)\n",
+    "* 상속의 경우\n",
+    "    * 클래스 상속 (보통 클래스, 추상클래스)\n",
+    "    * 인터페이스 상속\n",
+    "* Interface와 Abstract Class차이?\n",
+    "    * interface는 marker 역할. 구현할 클래스의 시그니처만 정해 놓는다.\n",
+    "    * abstract class는 구현하지 않는 함수를 가지게 된다.\n",
+    "\n",
+    "* overriding vs overloading\n",
+    "    * 상속을 사용하면 superclass의 함수를 overriding하게 된다.\n",
+    "    * 이 때 overloading과의 차이를 식별해야 한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### 1.4.3 다형성\n",
+    "\n",
+    "* 동적함수호출 DMI(Dynamic Method Invocation)\n",
+    "* 객체지향 프로그래밍은 상속을 적용하여 비객체지향에서 구현하기 어려운 다형성을 활용하는 것이 중요하다.\n",
+    "* 다형성이란 '컴파일 시점'에 '선언'된 클래스와 다른 객체를 '실행 시점'에 사용하는 것으로 흥미로운 객체지향 프로그램을 만들 수 있게 된다.\n",
+    "    * 일반적으로 함수호출은 '컴파일 시점'에 결정.\n",
+    "    * 그러나 다형성을 사용하면, 그 다형적 함수의 호출은 '실행 시점'으로 결정이 늦춰짐.\n",
+    "    * 이러한 특징을 late binding 또는 dynamic binding이라고 함.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## 문제 1-1:  상속을 사용하여 '거북이' upcasting and downcasting\n",
     "\n",
     "* 상속을 사용하면 casting을 하게 된다.\n",
     "* 거북이 사례의 이해\n",
@@ -225,7 +276,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### UML\n",
     "\n",
@@ -239,7 +294,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [],
    "source": [
@@ -250,7 +308,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -289,19 +350,25 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "### 소스코드\n",
+    "### 구현  warming up\n",
     "\n",
-    "* Turtle은 \"Turtle Graphics with Java\" 검색해서 library 설치\n",
-    "    * 1_hello_java.ipynb참조"
+    "* Turtle은 \"Turtle Graphics with Java\" 검색해서 library 설치\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [],
    "source": [
@@ -332,7 +399,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [],
    "source": [
@@ -357,7 +427,10 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -379,7 +452,10 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -397,9 +473,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### casting\n",
+    "* 예제 아래 auto변수(객체)는 부모객체이다. 자식 객체 Sedan, Sports Car 참조가 가능하다.\n",
+    "* 따라서 '실행 시점'에 사용될 다형적 함수를 결정해서 호출함 (overriding 함수)\n",
+    "\n",
+    "    ```\n",
+    "    Automobile auto = new Sedan(Color.black);\n",
+    "    ```\n",
     "\n",
     "* downcasting\n",
     "    * superclass에서 -> subclass로 변환\n",
@@ -409,14 +495,22 @@
     "    * subclass에서 -> superclass로 변환\n",
     "    * upcasting은 자동으로 되므로, 별도의 casting은 불필요하다.\n",
     "    * upcasting은 superclass의 함수, 속성만 쓸 수 있다\n",
-    "        * supclass 고유의 함수, 속성은 잃어 버리게 된다\n",
-    "        \n",
+    "        * subclass 고유의 함수, 속성은 잃어 버리게 된다\n",
+    "        (다시 downcasting하면 복원되므로 hidden이라고 해야 옳다)\n",
+    "\n",
     "* upcasting -> downcasting\n",
     "    * 2-way downcasting after upcasting is ok\n",
-    "    * 상속관계에서 컴파일시점에 upcasting을 해 놓고, 실행시점에 그에 맞는\n",
-    "downcasting을 하게 되면 재미 있는 다형적 행태를 보게 된다.\n",
-    "\n",
-    "\n",
+    "    * 상속관계에서 컴파일시점에 upcasting을 해 놓고, 실행시점에 그에 맞는 downcasting을 하게 되면 재미 있는 다형적 행태를 보게 된다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "* 예제 automatic upcasting (but downcasting must be manual)\n",
     "    \n",
     "    ```\n",
@@ -424,7 +518,17 @@
     "    > import ch.aplu.turtle.*    \n",
     "    > Turtle tOFwt=new WeightTurtle(10)\n",
     "    ```\n",
-    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "* 예제 upcasting drops all submethods and subfields e.g., getHeight -> superclass's\n",
     "    * 자식을 부모클래스로 바꾸었다가 다시 자식으로 변환해도 좋다\n",
     "    * 자식WeightTurtle이 부모Turtle로 바꾸었다가, 다시 내려 getWeight() 호출가능.\n",
@@ -434,16 +538,34 @@
     "    Static Error: No method in Turtle has name 'getWeight'\n",
     "    > ((WeightTurtle)tOFwt).getWeight()\n",
     "    10\n",
-    "    ```\n",
-    "\n",
+    "    ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "* 예제 downcasting\n",
     "    ```\n",
     "    > WeightTurtle wt1=new Turtle()\n",
     "    Static Error: Bad types in assignment: from Turtle to WeightTurtle\n",
     "    > WeightTurtle wt1=(WeightTurtle)new Turtle()\n",
     "    java.lang.ClassCastException: From ch.aplu.turtle.Turtle to com.sd.turtle.WeightTurtle\n",
-    "    ```\n",
-    "\n",
+    "    ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "* 예제 up and down polymorphic with casting\n",
     "    ```\n",
     "    > public void myPrint(Turtle t) {\n",
@@ -472,22 +594,51 @@
     "    * 변하는 부분을 고정부분과 분리함 -> 상속? 연관?\n",
     "    * SOLID (Martin, R.C., 2000)\n",
     "\n",
-    "* 설계는 변하는 부분을 분리시키고, 재사용(중복)을 늘리는 것!\n",
-    "\n",
+    "* 설계는 변하는 부분을 분리시키고, 재사용(중복)을 늘리는 것!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "* GRASP (Larman, C. ,2005, Applying UML and patterns: an introduction to object-oriented analysis and design and iterative development. Pearson)\n",
-    "    * Creator, information expert, low coupling, controller, high cohesion, indirection, polymorphism, protected variations, pure fabrication\n",
+    "    * Creator, information expert, low coupling, controller, high cohesion, indirection, polymorphism, protected variations, pure fabrication"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* Key design practices (Microsoft Application Architecture Guide, 2nd Ed., Microsoft Press)\n",
     "    * separation of concerns. 기능이 명확하게 구분되도록 설계. high cohesion and low coupling.\n",
     "    * signle responsibility principle. 단일 기능을 수행하도록 설계.\n",
     "    * principle of least knowledge. 내부적으로 구현된 내용을 서로 알지 못하게 설계. Low of Demeter (LoD)\n",
     "    * don't repeat yourself (DRY). 특정기능이 중복되게 사용되지 않게 설계.\n",
-    "    * minimize upfront design - 요구사항이 불분명할 경우 처음부터 'big design'으로 하지 말고, 가볍게 반복적으로 설계 (agile method). YAGNI ('You ain't gonna need it!')이라고도 함.\n",
+    "    * minimize upfront design - 요구사항이 불분명할 경우 처음부터 'big design'으로 하지 말고, 가볍게 반복적으로 설계 (agile method). YAGNI ('You ain't gonna need it!')이라고도 함."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "* SOLID (Martin, R. C., \"Design principles and design patterns\",2000, objectmentor.com)\n",
-    "    * SRP Single Responsibility Principle\n",
-    "    * OCP Open Closed Principle\n",
-    "    * LSP Liskov Substitution Principle\n",
-    "    * ISP Interface Segregation Principle\n",
-    "    * DIP Dependency Inversion Principle\n",
+    "\n",
+    "원칙 | 설명\n",
+    "-----|-----\n",
+    "SRP | Single Responsibility Principle\n",
+    "OCP | Open Closed Principle\n",
+    "LSP | Liskov Substitution Principle\n",
+    "ISP | Interface Segregation Principle\n",
+    "DIP | Dependency Inversion Principle\n",
+    "\n",
     "* 즉, coupling and cohesion, inheritance, interface, and polymorphism, delegation, aggregation을 사용하여 Good Design"
    ]
   },
@@ -537,7 +688,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -575,7 +726,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -616,7 +767,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### 1.6.2 LSP\n",
     "\n",
@@ -633,7 +788,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### 1.6.3 Dependency Inversion Principle\n",
     "\n",
@@ -646,7 +805,10 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -687,7 +849,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### 1.6.4 Interface Segregation Principle\n",
     "\n",
