--- a/hello_env.ipynb
+++ b/hello_env.ipynb
@@ -10,12 +10,15 @@
     "\n",
     "### 1.1.1 강의 목표\n",
     "\n",
-    "* 수업 자료, Q&A  \n",
-    "* 개발환경\n",
+    "* 수업의 자료를 열람하고, 온라인 Q&A를 할 수 있다.\n",
+    "* 개발환경을 설치한다.\n",
     "\n",
     "### 1.1.2 문제\n",
     "\n",
-    "* 문제 1-1: Hello World\n"
+    "* 문제 1-1: 강의자료를 열어본다.\n",
+    "* 문제 1-2: 온라인 Q&A\n",
+    "* 문제 1-3: 프로젝트 디렉토리를 설정한다.\n",
+    "* 문제 1-4: DrJava에서 interaction pane을 사용하여 자바를 실행한다."
    ]
   },
   {
@@ -151,11 +154,12 @@
     "    ```\n",
     "    $ cat ~/.drjava\n",
     "    ```\n",
-    "\n",
-    "* build dir\n",
-    "    * project를 만들어 > Project Properties > Build Directory를 설정하면 클래스를 분리할 수 있다.\n",
-    "    * drjava에서 컴파일하고 나면, 소스가 저장된 디렉토리에 클래스가 생성.\n",
-    "    * Project > Clean Build Directory기능으로 build dir를 깨끗하게 할 수 있다.\n",
+    "* Project File\n",
+    "    * 파일 확장자 .drjava를 가진 프로젝트 파일이 생성된다. xml형식으로 구성되어 있다.\n",
+    "    * build dir를 설정할 수 있다.\n",
+    "        * project를 만들어 > Project Properties > Build Directory를 설정하면 클래스를 분리할 수 있다.\n",
+    "        * drjava에서 컴파일하고 나면, 소스가 저장된 디렉토리에 클래스가 생성.\n",
+    "        * Project > Clean Build Directory기능으로 build dir를 깨끗하게 할 수 있다.\n",
     "    \n",
     "* '>'는 drjava interaction pane에서 실행하는 예시.\n",
     "\n",
