--- a/2_strategy.ipynb
+++ b/2_strategy.ipynb
@@ -11,14 +11,12 @@
     "# 1. Strategy 패턴\n",
     "\n",
     "* Strategy 패턴은 Behavioral Design Pattern\n",
-    "* 프로그래밍 'Duck' 'Sort' (HFDP Ch1)\n",
-    "    * exercise (by Sat to git: 50% for 1 day late deadline) \n",
-    "        * case extension - 거북이를 무게에 따라 정렬\n",
-    "        * new case -  \n",
-    "\n",
     "* Policy Pattern\n",
-    "* 알고리즘이 여러 버전이 존재하고, 실행시점에 경우에 따라 선택\n",
-    "* 대표적인 사례는 정렬. Collections.sort() method that takes Comparator parameter. Based on the different implementations of Comparator interfaces, the Objects are getting sorted in different ways."
+    "* 알고리즘이 서로 다르고, 실행시점에 하나를 선택하여 실행하는 경우\n",
+    "    * 라면의 조리가 서로 다른 경우\n",
+    "    * 영화를 보는 경우, 누구는 초대권, 누구는 멤버쉽 할인 등 서로 다른 경우\n",
+    "* 대표적인 사례로는 정렬.\n",
+    "    * Collections.sort() 함수에서 Comparator 인터페이스를 이용하는 경우, 서로 다른 정렬 알고리즘을 구현하고, 실행 시점에 결정함.\n"
    ]
   },
   {
@@ -34,9 +32,25 @@
     "요소 | 설명\n",
     "---|---\n",
     "name | Strategy\n",
-    "problem | 알고리즘 여러 경우 존재\n",
-    "solution | 실행시점에 맞는 알고리즘을 호출\n",
+    "problem | 알고리즘 서로 다른 버전이 존재해서, if문으로 처리해야 하거나 중복이 발생 \n",
+    "solution | 중복을 공통화, 실행시점에 맞는 알고리즘을 호출\n",
     "consequence | OCP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "* 프로그래밍 예제\n",
+    "    * 'Duck' (HFDP Ch1)\n",
+    "    * 'Sort'\n",
+    "    * exercise (by Sat to git: 50% for 1 day late deadline) \n",
+    "        * case extension - 거북이를 무게에 따라 정렬\n",
+    "        * new case - "
    ]
   },
   {
@@ -67,8 +81,8 @@
     "\n",
     "클래스 | 설명\n",
     "-----|-----\n",
-    "Context | 적용할 Strategy를 결정\n",
-    "Strategy | 런타임에 사용하는 Strategy\n",
+    "Context | 적용할 Strategy를 결정. 속성으로 사용할 Strategy를 가진다.\n",
+    "Strategy | 런타임에 사용하는 Strategy로서 구현은 하위 Strategy1에 위임한다.\n",
     "Strategy1 | 실행시점에 적용하는 Strategy를 가진다."
    ]
   },
@@ -130,14 +144,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## 4. 사례\n",
     "\n",
     "사례 | 설명\n",
     "------|------\n",
-    "사례 1 | 새들의 fly()\n",
-    "사례 2 | 정렬"
+    "사례 1 | Duck fly()\n",
+    "사례 2 | 정렬 - compareTo(), Interface Comparator를 구현하는 경우"
    ]
   },
   {
@@ -148,7 +166,9 @@
     }
    },
    "source": [
-    "### S.4.1 "
+    "### S.4.1\n",
+    "\n",
+    "* Duck의 Flyable, Quackable을 실행시점에 결정"
    ]
   },
   {
@@ -213,7 +233,10 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -263,7 +286,10 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -308,7 +334,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -335,7 +364,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
